ganti html dan views.py

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -45,7 +45,7 @@
             <h5>Nama Baju : </h5>
             <p>{{ name }}</p>
             <h5>Harga : </h5>
-            <p>{{ price }}</p>
+            <p>Rp{{ price }}</p>
             <h5>Description : </h5>
             <p>{{ description }}</p>
             <h5>Quantity :</h5>
