--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,57 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <style>
-        body {
-            background-color: rgb(244, 244, 244);
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        .header {
-            text-align: center;
-            margin-top: 3rem;
-            font-size: 3rem;
-        }
-
-        .container {
-            width: 80%;
-            margin: 0 auto;
-            border: 2px solid black;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-        }
-
-        .copyright {
-            text-align: center;
-            margin: 10px 0;
-        }
-	
-        .all-container {
-            position: relative;
-            top: 2rem;
-            width: 50%;
-            margin: 0 auto;
-        }
-    </style>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends 'base.html' %}
+{% block content %}
     <title>Wearwise | Wear the Trend</title>
-</head>
-<body>
-    <h1 class="header">Selamat Datang di <mark style="background-color: purple; color: rgb(251, 0, 0);">{{ brand }}!</mark></h1>
-        <div class ="all-container">
-	<div class="container">
-            <h5>Nama Baju : </h5>
-            <p>{{ name }}</p>
-            <h5>Harga : </h5>
-            <p>Rp{{ price }}</p>
-            <h5>Description : </h5>
-            <p>{{ description }}</p>
-            <h5>Quantity :</h5>
-            <p>{{ quantity }}</p>
-        </div>
-        <p class="copyright">Copyright by Wearwise - {{ myname }} - {{ kelas }}</p>
-	</div<
-</body>
-</html>
+    <body style="font-family: sans-serif;">
+        <h1>Selamat Datang di <mark style="background-color: purple; color: rgb(251, 0, 0);">{{ brand }}!</mark></h1>
+                <h5>Nama Produk : </h5>
+                <p>{{ name }}</p>
+                <h5>Harga : </h5>
+                <p>Rp{{ price }}</p>
+                <h5>Description : </h5>
+                <p>{{ description }}</p>
+                <h5>Quantity :</h5>
+                <p>{{ quantity }}</p>
+            </div>
+            <p>Copyright by Wearwise - {{ myname }} - {{ kelas }}</p>
+
+        {% if not products %}
+        <p>Belum ada data produk tambahan yang ditambahkan di wearwise.</p>
+        {% else %}
+        <table>
+            <tr>
+            <th>Nama Produk</th>
+            <th>Harga</th>
+            <th>Deskripsi Produk</th>
+            <th>Kuantitas</th>
+            </tr>
+
+            {% comment %} Berikut cara memperlihatkan data mood di bawah baris ini 
+            {% endcomment %} 
+            {% for product in products %}
+            <tr>
+            <td style="text-align: center;">{{product.name}}</td>
+            <td style="text-align: center;">{{product.price}}</td>
+            <td style="text-align: center;">{{product.description}}</td>
+            <td style="text-align: center;">{{product.quantity}}</td>
+            </tr>
+            {% endfor %}
+        </table>
+        {% endif %}
+
+        <br />
+
+        <a href="{% url 'main:create_product' %}">
+            <button>Tambahkan Produk</button>
+        </a>
+    </div>
+        </body>
+{% endblock content %}
