--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
+<style>
+    body {
+        text-align: center;
+        font-family: sans-serif;
+    }
+    
+</style>
 <h1>Tambahkan Produk Wearwise</h1>
 
 <form method="POST">
