--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% block meta %} {% endblock meta %}
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" href="{% static 'image/favicon.png' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'image/favico.png' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'css/global.css' %}"/>
   </head>
   <body>
