--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -2,34 +2,173 @@
 {% load static %}
 {% block content %}
     {% include 'navbar.html' %}
+    <style>
+        .neon-purple-outline {
+            box-shadow: 0 0 5px #8b5cf6, 0 0 10px #8b5cf6, 0 0 15px #8b5cf6; /* Adjust the shadow as needed */
+            transition: box-shadow 0.3s ease-in-out;
+        }
+    
+        .neon-purple-outline:hover {
+            box-shadow: 0 0 10px #8b5cf6, 0 0 20px #8b5cf6, 0 0 30px #8b5cf6; /* Increase the glow on hover */
+        }
+    </style>
     <title>Wearwise | Wear the Trend</title>
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@3.1.7/dist/purify.min.js"></script>
     <div class="bg-gray-100 min-h-screen p-8 pt-24">
         <h1 class="text-3xl font-bold text-center mb-8">
             Selamat Datang di <span class="bg-purple-600 text-white px-2 py-1 rounded">{{ brand }}</span>!
         </h1>
 
-        {% if products %}
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                {% for product in products %}
-                    {% include 'card-product.html' with product=product %}
-                {% endfor %}
-            </div>
-        {% else %}
-        <div class="flex flex-col items-center justify-center bg-white rounded-lg shadow-lg p-12 max-w-2xl mx-auto">
-            <div class="relative mb-8">
-                <img src="{% static 'image/sad-tee.png' %}" alt="No products" class="w-64 h-64 floating-image glow-effect rounded-full">
-                <div class="absolute top-0 left-0 w-full h-full bg-purple-500 opacity-20 rounded-full"></div>
-            </div>
-            <p class="text-center text-gray-600 text-lg mb-8">Belum ada data produk tambahan yang ditambahkan di Wearwise.</p>
-        </div>
-        {% endif %}
+        <div id="product_cards"></div>
 
-        <div class="mt-12 text-center">
+        <!-- Modal -->
+        <div id="crudModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-gray-800 bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
+            <div id="crudModalContent" class="relative bg-white rounded-lg shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out">
+              <!-- Modal header -->
+              <div class="flex items-center justify-between p-4 border-b rounded-t">
+                <h3 class="text-xl font-semibold text-gray-900">
+                  Add New Product
+                </h3>
+                <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" id="closeModalBtn">
+                  <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                  </svg>
+                  <span class="sr-only">Close modal</span>
+                </button>
+              </div>
+              <!-- Modal body -->
+              <div class="px-6 py-4 space-y-6 form-style">
+                <form id="productForm">
+                  <div class="mb-4">
+                    <label for="name" class="block text-sm font-medium text-gray-700">Product Name</label>
+                    <input type="text" id="name" name="name" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" required>
+                  </div>
+                  <div class="mb-4">
+                    <label for="price" class="block text-sm font-medium text-gray-700">Price</label>
+                    <input type="number" id="price" name="price" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" required>
+                  </div>
+                  <div class="mb-4">
+                    <label for="description" class="block text-sm font-medium text-gray-700">Description</label>
+                    <textarea id="description" name="description" rows="3" class="mt-1 block w-full resize-none border border-gray-300 rounded-md p-2 hover:border-indigo-700" required></textarea>
+                  </div>
+                  <div class="mb-4">
+                    <label for="quantity" class="block text-sm font-medium text-gray-700">Quantity</label>
+                    <input type="number" id="quantity" name="quantity" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" required>
+                  </div>
+                </form>
+              </div>
+              <!-- Modal footer -->
+              <div class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t border-gray-200 rounded-b justify-center md:justify-end">
+                <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg" id="cancelButton">Back</button>
+                <button type="submit" id="submitProductForm" form="productForm" class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded-lg">Save</button>
+            </div>
+            </div>
+        </div>
+
+        <div class="mt-2 text-center">
             <h5 class="text-lg">Halo, <span class="font-semibold">@{{ usname }}</span>!</h5>
             <h5 class="text-sm text-gray-600">Sesi terakhir login: {{ last_login }}</h5>
         </div>
-        <div class="text-center mt-12 py-4 border-t border-gray-300">
+        <div class="text-center mt-3 py-4 border-t border-gray-300">
             <p class="text-sm text-gray-500">Copyright by {{ brand }} - {{ myname }} - {{ kelas }}</p>
         </div>
     </div>
+
+    <script>
+        async function getProducts(){
+            return fetch("{% url 'main:show_json' %}").then((res) => res.json())
+        }
+
+        async function refreshProducts() {
+            document.getElementById("product_cards").innerHTML = "";
+            document.getElementById("product_cards").className = "";
+
+            const products = await getProducts();
+            let htmlString = "";
+            let classNameString = "";
+
+            if (products.length === 0) {
+                classNameString = "flex flex-col items-center justify-center min-h-[24rem] p-6";
+                htmlString = `
+                <div class="flex flex-col items-center justify-center bg-white rounded-lg shadow-lg p-12 max-w-2xl mx-auto">
+                <div class="relative mb-8">
+                <img src="{% static 'image/sad-tee.png' %}" alt="No products" class="w-64 h-64 floating-image glow-effect rounded-full">
+                <div class="absolute top-0 left-0 w-full h-full bg-purple-500 opacity-20 rounded-full"></div>
+                </div>
+                <p class="text-center text-gray-600 text-lg mb-8">Belum ada data produk tambahan yang ditambahkan di Wearwise.</p>
+                </div>
+                `;
+            }
+            else {
+                classNameString = "grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6";
+                products.forEach((item) => {
+                    const name = DOMPurify.sanitize(item.fields.name);
+                    const description = DOMPurify.sanitize(item.fields.description);
+                    const price = item.fields.price;  
+                    const quantity = item.fields.quantity;  
+                    const pk = item.pk;  
+                    htmlString += ` 
+                        <div class="bg-white rounded-lg shadow-md overflow-hidden neon-purple-outline">
+                        <div class="p-6">
+                            <h2 class="text-xl font-semibold mb-2">${name}</h2>
+                            <p class="text-gray-600 mb-4">${description}</p>
+                            <div class="flex justify-between items-center mb-4">
+                                <span class="text-lg font-bold text-purple-600">Rp${price}</span>
+                                <span class="text-sm text-gray-500">Stok: ${quantity}</span>
+                            </div>
+                            <div class="flex justify-between">
+                                <a href="/edit-product/${pk}" class="text-indigo-600 hover:text-indigo-800">Edit</a>
+                                <a href="/delete-product/${pk}" class="text-red-600 hover:text-red-800">Delete</a>
+                            </div>
+                        </div>
+                    </div>
+                    `;
+                });
+            }
+            document.getElementById("product_cards").className = classNameString;
+            document.getElementById("product_cards").innerHTML = htmlString;
+        }
+
+        refreshProducts();
+
+        const modal = document.getElementById('crudModal');
+        const modalContent = document.getElementById('crudModalContent');
+
+        function showModal() {
+            modal.classList.remove('hidden'); 
+            setTimeout(() => {
+                modalContent.classList.remove('opacity-0', 'scale-95');
+                modalContent.classList.add('opacity-100', 'scale-100');
+            }, 50); 
+        }
+
+        function hideModal() {
+            modalContent.classList.remove('opacity-100', 'scale-100');
+            modalContent.classList.add('opacity-0', 'scale-95');
+
+            setTimeout(() => {
+                modal.classList.add('hidden');
+            }, 150); 
+        }
+
+        document.getElementById("cancelButton").addEventListener("click", hideModal);
+        document.getElementById("closeModalBtn").addEventListener("click", hideModal);
+
+        function addProduct() {
+            fetch("{% url 'main:add_product_ajax' %}", {
+                method: "POST",
+                body: new FormData(document.querySelector('#productForm')),
+            })
+            .then(response => refreshProducts());
+
+            document.getElementById("productForm").reset();
+            document.querySelector("[data-modal-toggle='crudModal']").click(); 
+            return false;
+        }
+
+        document.getElementById("productForm").addEventListener("submit", (e) => {
+            e.preventDefault();
+            addProduct();
+        });
+    </script>
 {% endblock %}
