--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -169,6 +169,7 @@
         document.getElementById("productForm").addEventListener("submit", (e) => {
             e.preventDefault();
             addProduct();
+            hideModal();
         });
     </script>
 {% endblock %}
