--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -5,7 +5,7 @@
 {% include 'navbar.html' %}
 <div class="flex justify-center items-center min-h-screen bg-gray-100 p-2">
     <div class="flex flex-col items-center bg-white p-3 rounded-lg shadow-lg max-w-xs w-full">
-        <h1 class="text-xl font-semibold text-center text-gray-800 mb-3">Tambahkan Product</h1>
+        <h1 class="text-xl font-semibold text-center text-gray-800 mb-3">Add Product</h1>
 
         <!-- Message Display -->
         {% if messages %}
